Adds custom color to histogram
